WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236123
REGRESSION (
r288201
): ASSERTION FAILED: !allScriptExecutionContextsMap().contains(m_identifier)
https://bugs.webkit.org/show_bug.cgi?id=236123
Summary
REGRESSION (r288201): ASSERTION FAILED: !allScriptExecutionContextsMap().cont...
Robert Jenner
Reported
2022-02-03 20:59:02 PST
The following 4 http/tests/multipart (layout-tests) are having a constant ASSERTION FAILED: !allScriptExecutionContextsMap().contains(m_identifier) on all Mac wk1 debug queues: http/tests/multipart/load-last-non-html-frame.py http/tests/multipart/multipart-html.py http/tests/multipart/multipart-replace-non-html-content.py http/tests/multipart/multipart-wait-before-boundary.html HISTORY:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=http%2Ftests%2Fmultipart%2Fload-last-non-html-frame.py&test=http%2Ftests%2Fmultipart%2Fmultipart-html.py&test=http%2Ftests%2Fmultipart%2Fmultipart-replace-non-html-content.py&test=http%2Ftests%2Fmultipart%2Fmultipart-wait-before-boundary.html
ASSERTION FAILED: !allScriptExecutionContextsMap().contains(m_identifier) ./dom/ScriptExecutionContext.cpp(118) : WebCore::ScriptExecutionContext::ScriptExecutionContext(WebCore::ScriptExecutionContextIdentifier) 1 0x10454b5dc WTFCrash 2 0x12a9f6b70 WebCore::JSANGLEInstancedArrays::createPrototype(JSC::VM&, WebCore::JSDOMGlobalObject&) 3 0x12dbf4d78 WebCore::ScriptExecutionContext::ScriptExecutionContext(WebCore::ProcessQualified<WTF::UUID>) 4 0x12d9adb40 WebCore::Document::Document(WebCore::Frame*, WebCore::Settings const&, WTF::URL const&, WTF::OptionSet<WebCore::Document::DocumentClass>, unsigned int, WebCore::ProcessQualified<WTF::UUID>) 5 0x12df140cc WebCore::HTMLDocument::HTMLDocument(WebCore::Frame*, WebCore::Settings const&, WTF::URL const&, WebCore::ProcessQualified<WTF::UUID>, WTF::OptionSet<WebCore::Document::DocumentClass>, unsigned int) 6 0x12df13fa8 WebCore::HTMLDocument::HTMLDocument(WebCore::Frame*, WebCore::Settings const&, WTF::URL const&, WebCore::ProcessQualified<WTF::UUID>, WTF::OptionSet<WebCore::Document::DocumentClass>, unsigned int) 7 0x12d979348 WebCore::HTMLDocument::create(WebCore::Frame*, WebCore::Settings const&, WTF::URL const&, WebCore::ProcessQualified<WTF::UUID>) 8 0x12d97963c WebCore::DOMImplementation::createDocument(WTF::String const&, WebCore::Frame*, WebCore::Settings const&, WTF::URL const&, WebCore::ProcessQualified<WTF::UUID>) 9 0x12e69e800 WebCore::DocumentWriter::createDocument(WTF::URL const&, WebCore::ProcessQualified<WTF::UUID>) 10 0x12e690238 WebCore::DocumentWriter::begin(WTF::URL const&, bool, WebCore::Document*, WebCore::ProcessQualified<WTF::UUID>) 11 0x12e68a35c WebCore::DocumentLoader::commitData(WebCore::SharedBuffer const&) 12 0x1498c927c -[WebFrame(WebInternal) _commitData:] 13 0x1499df2fc -[WebHTMLRepresentation receivedData:withDataSource:] 14 0x1498afed4 -[WebDataSource(WebInternal) _receivedData:] 15 0x1498a6c30 WebFrameLoaderClient::committedLoad(WebCore::DocumentLoader*, WebCore::SharedBuffer const&) 16 0x12e690110 WebCore::DocumentLoader::commitLoad(WebCore::SharedBuffer const&) 17 0x12e68a014 WebCore::DocumentLoader::maybeFinishLoadingMultipartContent() 18 0x12e68eb18 WebCore::DocumentLoader::setupForReplace() 19 0x12e68b5ec WebCore::DocumentLoader::responseReceived(WebCore::ResourceResponse const&, WTF::CompletionHandler<void ()>&&) 20 0x12e68e6f8 WebCore::DocumentLoader::responseReceived(WebCore::CachedResource&, WebCore::ResourceResponse const&, WTF::CompletionHandler<void ()>&&) 21 0x12e85c034 WebCore::CachedRawResource::responseReceived(WebCore::ResourceResponse const&) 22 0x12e7ce9bc WebCore::SubresourceLoader::didReceiveResponse(WebCore::ResourceResponse const&, WTF::CompletionHandler<void ()>&&) 23 0x12e7ad444 WebCore::ResourceLoader::didReceiveResponseAsync(WebCore::ResourceHandle*, WebCore::ResourceResponse&&, WTF::CompletionHandler<void ()>&&) 24 0x12f3bbdf8 WebCore::ResourceHandle::didReceiveResponse(WebCore::ResourceResponse&&, WTF::CompletionHandler<void ()>&&) 25 0x13015d3fc -[WebCoreResourceHandleAsOperationQueueDelegate connection:didReceiveResponse:]::$_4::operator()() 26 0x13015cf74 WTF::Detail::CallableWrapper<-[WebCoreResourceHandleAsOperationQueueDelegate connection:didReceiveResponse:]::$_4, void>::call() 27 0x1045762fc WTF::Function<void ()>::operator()() const 28 0x1046077d0 WTF::RunLoop::performWork() 29 0x10460c59c WTF::RunLoop::performWork(void*) 30 0x183542a84 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 31 0x1835429d0 __CFRunLoopDoSource0
Attachments
Patch
(3.15 KB, patch)
2022-02-11 02:08 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-02-03 21:06:10 PST
<
rdar://problem/88472494
>
youenn fablet
Comment 2
2022-02-11 02:08:36 PST
Created
attachment 451661
[details]
Patch
Ryan Haddad
Comment 3
2022-02-18 12:25:26 PST
***
Bug 236824
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2022-02-18 13:40:12 PST
Committed
r290167
(
247501@main
): <
https://commits.webkit.org/247501@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451661
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug